cmake_minimum_required(VERSION 3.15)

project("Consts")

set (CMAKE_CXX_STANDARD 14)

add_executable(1_const_types 1_const_types.cpp)
add_executable(2_function_arguments 2_function_arguments.cpp)
add_executable(3_const_instance_variables 3_const_instance_variables.cpp)
add_executable(4_method_arguments 4_method_arguments.cpp)
add_executable(5_const_after_method_name 5_const_after_method_name.cpp)
add_executable(6_const_class 6_const_class.cpp)
add_executable(7_pointer_to_a_const 7_pointer_to_a_const.cpp)
add_executable(8_const_pointer 8_const_pointer.cpp)
